add_library(vectorclass
        complexvec.h
        decimal.h
        quaternion.h
        ranvec1.cpp
        ranvec1.h
        vector3d.h
        instrset.h
        instrset_detect.cpp
        vectorclass.h
        vectorf128.h
        vectorf256.h
        vectorf256e.h
        vectorf512.h
        vectorf512e.h
        vectori128.h
        vectori256.h
        vectori256e.h
        vectori512.h
        vectori512e.h
        vectormath_common.h
        vectormath_exp.h
        vectormath_hyp.h
        vectormath_lib.h
        vectormath_trig.h)

target_link_libraries(vectorclass)